--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9"
+    "@astrojs/preact": "^3.1.1",
+    "@astrojs/rss": "^4.0.5",
+    "astro": "^4.5.12",
+    "install": "^0.13.0",
+    "marked": "^12.0.1",
+    "preact": "^10.20.1"
   }
 }
