--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^3.1.1",
+    "@astrojs/react": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
     "astro": "^4.5.12",
     "install": "^0.13.0",
     "marked": "^12.0.1",
-    "preact": "^10.20.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
