--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.2.0",
     "@astrojs/react": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
     "@types/react": "^18.2.74",
