--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^5.2.0",
     "@astrojs/react": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
+    "@astrojs/vercel": "^7.5.2",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "astro": "^4.5.12",
