--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "astro": "^4.5.12",
+    "framer-motion": "^11.1.7",
     "install": "^0.13.0",
     "marked": "^12.0.1",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-mathjax": "^6.0.0",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "sass": "^1.75.0"
   }
 }
